Addons/kube-prometheus/other/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prom-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    prometheus.io/http_probe: "true"
spec:
  rules:
  - host: alert.k8s-1.18.2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: alertmanager-main
          servicePort: 9093 
  - host: grafana.k8s-1.18.2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prom.k8s-1.18.2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
